Revision history for Net-Statsd-Lite

{{$NEXT}}

v0.6.3    2022-09-02 14:31:47+01:00 Europe/London
  [Documentation]
  - Bumped copyright year.

  - Fixed encoding of links in the README.

  [Other]
  - Signed distribution.

v0.6.2    2021-05-21 17:00:32+01:00 Europe/London
  [Documentation]
  - Fixed POD markup.

  - Note support for tagging extensions.

v0.6.1    2021-04-27 16:53:51+01:00 Europe/London
  [Enhancements]
  - Removed unused stub types library.

  - Removed checks for undefined rates.

  - Allow sampling rates for histogram metrics.

  [Bug Fixes]
  - Fix default sample rate.

  [Documentation]
  - Fixed typos in Changes.

  - Added additional link to statsd spec in SEE ALSO.

  - Add link to CloudWatch page on StatsD.

  [Tests]
  - Improved tests for sample rate cases.

v0.6.0    2021-04-25 23:07:35+01:00 Europe/London
  [Enhancements]
  - All measurement methods take an optional `$opts` hashref that can
    be used to pass additional information, such as tags.

  - Removed the use of custom type library.

  [Bug Fixes]
  - Updated DEMOLISH method to delete buffer after flush.

  [Incompatabilities]
  - Renamed internal `_record` method to `record_metric`.

  [Documentation]
  - Documented `record_metric` method for subclassing.

  - Documented how to extend this to support tagging.

  - Fixed typo for `meter` method name.

  - Fixed typos in Changes.

  - Updated copyright year.

  [Tests]
  - Added more author tests.

  - Increased timeout for tests.

v0.5.2    2021-04-24 11:59:55+01:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Removed the use of custom type library.

v0.5.1    2021-04-22 16:33:03+01:00 Europe/London (TRIAL RELEASE)
  [Bug Fixes]
  - Updated DEMOLISH method to delete buffer after flush.

  [Tests]
  - Increased timeout for tests.

v0.5.0    2021-04-22 00:30:57+01:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - All measurement methods take an optional `$opts` hashref that can