@@ -13,7 +13,7 @@ requires "Types::Common::Numeric" => "1.004000";
 requires "Types::Common::String" => "0";
 requires "Types::Standard" => "0";
 requires "namespace::autoclean" => "0";
-requires "perl" => "v5.10.0";
+requires "perl" => "v5.14.0";
 requires "strict" => "0";
 recommends "Ref::Util::XS" => "0";
 recommends "Type::Tiny::XS" => "0";
