@@ -2,7 +2,7 @@ package Net::Statsd::Lite;
 
 # ABSTRACT: A lightweight StatsD client that supports multimetric packets
 
-use v5.10;
+use v5.14;
 
 use Moo 1.000000;
 
@@ -449,6 +449,16 @@ tagging can be added using something like
 
       $self->$next( $suffix, $metric, $value, $opts );
   };
+
+=head1 SUPPORT FOR OLDER PERL VERSIONS
+
+Since v0.7.0, the this module requires Perl v5.14 or later.
+
+Future releases may only support Perl versions released in the last ten years.
+
+If you need this module on Perl v5.10, please use one of the v0.6.x
+versions of this module.  Significant bug or security fixes may be
+backported to those versions.
 
 =head1 SEE ALSO
 
