@@ -1,6 +1,6 @@
 #!perl
 
-use strict;
+use v5.14;
 use warnings;
 
 [
